Fix alignment of carousel

--- a/css/styles.css
+++ b/css/styles.css
@@ -186,6 +186,7 @@ h2 span {
   font-family: 'Catamaran', 'Helvetica', 'Arial', 'sans-serif';
   font-weight: 600;
   text-align: right;
+  margin-left: 20rem;
 }
 
 .section-5 {
